--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,12 +41,26 @@ dependencies {
     // size dimension dp
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.firebaseui:firebase-ui-database:4.3.2'
+// FirebaseUI for Firebase Realtime Database
+    implementation 'com.firebaseui:firebase-ui-database:5.0.0'
 
+// FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
     // Koin Dependency Injection
     implementation "io.insert-koin:koin-android:3.1.3"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
+    // FirebaseUI for Firebase Realtime Database
+    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
+
+    // FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
+
+    // FirebaseUI for Firebase Auth
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
+
+    // FirebaseUI for Cloud Storage
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     // Kotlin
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
